[Added] qrcode payment

--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -75,7 +75,8 @@
     "usernameAndPassword": "ชื่อผู้ใช้และรหัสผ่าน",
     "username": "ชื่อผู้ใช้",
     "editProfile": "แก้ไขโปรไฟล์",
-    "payment": "ชำระเงิน"
+    "payment": "ชำระเงิน",
+    "qrcodePayment": "ชำระเงินด้วย Qrcode"
   },
   "message": {
     "success": "สำเร็จ",
@@ -132,6 +133,8 @@
     "paymentToGroup": "ชำระเงินให้กลุ่ม %{name}",
     "totalPayment": "ยอดเงินที่ต้องชำระ %{price} Bath",
     "paymentFailed": "การชำระเงินล้มเหลว",
-    "paymentSuccess": "การชำระเงินสำเร็จ"
+    "paymentSuccess": "การชำระเงินสำเร็จ",
+    "requiresApp": "จำเป็นต้องมีแอปพลิเคชั่น %{name}",
+    "editProfileSuccessful": "แก้ไขข้อมูลสำเร็จ"
   }
 }
