--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -79,7 +79,8 @@
     "usernameAndPassword": "Username password",
     "username": "Username",
     "editProfile": "Edit profile",
-    "payment": "Payment"
+    "payment": "Payment",
+    "qrcodePayment": "Qrcode payment"
   },
   "message": {
     "forgotPassword": "Forgot password",
@@ -137,6 +138,8 @@
     "paymentToGroup": "Payment to group %{name}",
     "totalPayment": "Price %{price} Bath",
     "paymentFailed": "Payment failed",
-    "paymentSuccess": "Payment successful"
+    "paymentSuccess": "Payment successful",
+    "requiresApp": "Requires application %{name}",
+    "editProfileSuccessful": "Edit profile successful"
   }
 }
