--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -76,7 +76,10 @@
     "username": "ชื่อผู้ใช้",
     "editProfile": "แก้ไขโปรไฟล์",
     "payment": "ชำระเงิน",
-    "qrcodePayment": "ชำระเงินด้วย Qrcode"
+    "qrcodePayment": "ชำระเงินด้วย QR Code",
+    "merchantName": "ชื่อผู้ค้า",
+    "qrcodeExpire": "Qrcode หมดอายุ",
+    "amount": "ราคา"
   },
   "message": {
     "success": "สำเร็จ",
